[gd_scene load_steps=124 format=3 uid="uid://cmf7y3m1viru7"]

[ext_resource type="Script" path="res://Characters/Player/player.gd" id="1_qgyku"]
[ext_resource type="Texture2D" uid="uid://dauui76aplbxt" path="res://assets/sprite_sheets/temp_player/hero_front_walk_16x16.png" id="2_2nfpn"]
[ext_resource type="Texture2D" uid="uid://cu0k6r8na68ka" path="res://assets/sprite_sheets/temp_player/hero_left_walk_16x16.png" id="3_1xibx"]
[ext_resource type="PackedScene" uid="uid://dmis0hebcowem" path="res://Characters/Bow/bow.tscn" id="3_b7n85"]
[ext_resource type="Texture2D" uid="uid://cfjtthqin1qkw" path="res://assets/sprite_sheets/temp_player/hero_right_walk_16x16.png" id="4_58m4f"]
[ext_resource type="Texture2D" uid="uid://bgbtu5wgqmens" path="res://assets/sprite_sheets/temp_player/hero_back_walk_16x16.png" id="5_3un4s"]
[ext_resource type="Texture2D" uid="uid://dm6g3w4hp113p" path="res://assets/sprite_sheets/temp_player/hero_front_walk_boots_16x16.png" id="6_5vpxf"]
[ext_resource type="Texture2D" uid="uid://ftv1c0g47iq5" path="res://assets/sprite_sheets/temp_player/hero_front_walk_BaG16x16.png.png" id="6_b4yh2"]
[ext_resource type="Texture2D" uid="uid://cwcgx0qev230m" path="res://assets/sprite_sheets/temp_player/hero_left_walk_16x16_boots.png" id="7_h776i"]
[ext_resource type="AudioStream" uid="uid://co36n8uaun2oa" path="res://Characters/Player/dash.wav" id="7_vuimr"]
[ext_resource type="Texture2D" uid="uid://cwa3i083tbco4" path="res://assets/sprite_sheets/temp_player/hero_front_walk_gloves_16x16.png.png" id="8_3efc4"]
[ext_resource type="Texture2D" uid="uid://ct10owpi7jrp8" path="res://assets/sprite_sheets/temp_player/hero_left_walk_BaG16x16.png.png" id="8_dbsgg"]
[ext_resource type="Texture2D" uid="uid://yxbvkgng3nbc" path="res://assets/sprite_sheets/temp_player/hero_right_walk_16x16_boots.png" id="8_pd1a5"]
[ext_resource type="AudioStream" uid="uid://c6h674oujppdi" path="res://Characters/Bow/release.wav" id="8_rwk4p"]
[ext_resource type="Texture2D" uid="uid://c51toy7wf246u" path="res://assets/sprite_sheets/temp_player/hero_back_walk_boots16x16.png" id="9_8myj2"]
[ext_resource type="AudioStream" uid="uid://ugy88vrrmuvb" path="res://Characters/Bow/draw.wav" id="9_q8hjr"]
[ext_resource type="Texture2D" uid="uid://dfadxf5gqggtq" path="res://assets/sprite_sheets/temp_player/hero_left_walk_Gloves16x16.png.png" id="10_aarxm"]
[ext_resource type="AudioStream" uid="uid://ckuehnhn4t6yt" path="res://Characters/Player/hit1.wav" id="10_l22tc"]
[ext_resource type="Texture2D" uid="uid://cg8p3vvf5w8sx" path="res://assets/sprite_sheets/temp_player/hero_right_walk_BaG16x16.png.png" id="11_sfehe"]
[ext_resource type="AudioStream" uid="uid://ddh7jsbftjfop" path="res://Characters/Player/hit2.wav" id="11_u0y60"]
[ext_resource type="Texture2D" uid="uid://c1bocb1uo28gb" path="res://assets/sprite_sheets/temp_player/hero_right_walk_gloves_16x16.png.png" id="13_1ndg0"]
[ext_resource type="Texture2D" uid="uid://cfa581w44m1hk" path="res://assets/sprite_sheets/temp_player/hero_back_walk_BaG16x16.png" id="14_ssgcc"]
[ext_resource type="Texture2D" uid="uid://bnd553ugkb5mh" path="res://assets/sprite_sheets/temp_player/hero_back_walk_gloves_16x16.png" id="16_8hohc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_unbkb"]
radius = 6.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e4423"]
atlas = ExtResource("2_2nfpn")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdab8"]
atlas = ExtResource("2_2nfpn")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3okan"]
atlas = ExtResource("2_2nfpn")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_me77q"]
atlas = ExtResource("2_2nfpn")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmk0m"]
atlas = ExtResource("2_2nfpn")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b4kq"]
atlas = ExtResource("2_2nfpn")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg20b"]
atlas = ExtResource("3_1xibx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m24mw"]
atlas = ExtResource("3_1xibx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhkt7"]
atlas = ExtResource("3_1xibx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn0ea"]
atlas = ExtResource("3_1xibx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x61iy"]
atlas = ExtResource("3_1xibx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgwe7"]
atlas = ExtResource("3_1xibx")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oweyd"]
atlas = ExtResource("4_58m4f")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q44k1"]
atlas = ExtResource("4_58m4f")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6juj5"]
atlas = ExtResource("4_58m4f")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0grhm"]
atlas = ExtResource("4_58m4f")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_452uo"]
atlas = ExtResource("4_58m4f")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wtvf"]
atlas = ExtResource("4_58m4f")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17udm"]
atlas = ExtResource("5_3un4s")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_us7ln"]
atlas = ExtResource("5_3un4s")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoxic"]
atlas = ExtResource("5_3un4s")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgjpy"]
atlas = ExtResource("5_3un4s")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_584wc"]
atlas = ExtResource("5_3un4s")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps46h"]
atlas = ExtResource("5_3un4s")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t4gs"]
atlas = ExtResource("6_b4yh2")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_383qh"]
atlas = ExtResource("6_b4yh2")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rmm4"]
atlas = ExtResource("6_b4yh2")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrek2"]
atlas = ExtResource("6_b4yh2")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g34wu"]
atlas = ExtResource("6_b4yh2")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5idoe"]
atlas = ExtResource("6_b4yh2")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt3km"]
atlas = ExtResource("6_5vpxf")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhnlt"]
atlas = ExtResource("6_5vpxf")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53l1q"]
atlas = ExtResource("6_5vpxf")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0am2v"]
atlas = ExtResource("6_5vpxf")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irxae"]
atlas = ExtResource("6_5vpxf")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbfve"]
atlas = ExtResource("6_5vpxf")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sps7p"]
atlas = ExtResource("8_3efc4")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvbxn"]
atlas = ExtResource("8_3efc4")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjosp"]
atlas = ExtResource("8_3efc4")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3kvo"]
atlas = ExtResource("8_3efc4")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtvx6"]
atlas = ExtResource("8_3efc4")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohon6"]
atlas = ExtResource("8_3efc4")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dqi2"]
atlas = ExtResource("8_dbsgg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqhcy"]
atlas = ExtResource("8_dbsgg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o4tf"]
atlas = ExtResource("8_dbsgg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_igkpp"]
atlas = ExtResource("8_dbsgg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsdq4"]
atlas = ExtResource("8_dbsgg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn1x0"]
atlas = ExtResource("8_dbsgg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh803"]
atlas = ExtResource("7_h776i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7v3x"]
atlas = ExtResource("7_h776i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwhbs"]
atlas = ExtResource("7_h776i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0es8"]
atlas = ExtResource("7_h776i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nrnf"]
atlas = ExtResource("7_h776i")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7in1"]
atlas = ExtResource("7_h776i")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhu1h"]
atlas = ExtResource("10_aarxm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgba1"]
atlas = ExtResource("10_aarxm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmy3o"]
atlas = ExtResource("10_aarxm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycijc"]
atlas = ExtResource("10_aarxm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5x0c"]
atlas = ExtResource("10_aarxm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpdyy"]
atlas = ExtResource("10_aarxm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfh07"]
atlas = ExtResource("11_sfehe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7be6"]
atlas = ExtResource("11_sfehe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbpxc"]
atlas = ExtResource("11_sfehe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqcfg"]
atlas = ExtResource("11_sfehe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfwts"]
atlas = ExtResource("11_sfehe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxcmm"]
atlas = ExtResource("11_sfehe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmm4e"]
atlas = ExtResource("8_pd1a5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4fni"]
atlas = ExtResource("8_pd1a5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv8ap"]
atlas = ExtResource("8_pd1a5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87vq5"]
atlas = ExtResource("8_pd1a5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utthb"]
atlas = ExtResource("8_pd1a5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_711k4"]
atlas = ExtResource("8_pd1a5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cql70"]
atlas = ExtResource("13_1ndg0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7niea"]
atlas = ExtResource("13_1ndg0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhoq6"]
atlas = ExtResource("13_1ndg0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwynr"]
atlas = ExtResource("13_1ndg0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcv3e"]
atlas = ExtResource("13_1ndg0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcl6i"]
atlas = ExtResource("13_1ndg0")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5xb0"]
atlas = ExtResource("14_ssgcc")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ecq0"]
atlas = ExtResource("14_ssgcc")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_idd5n"]
atlas = ExtResource("14_ssgcc")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgo12"]
atlas = ExtResource("14_ssgcc")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bx5w"]
atlas = ExtResource("14_ssgcc")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b0bu"]
atlas = ExtResource("14_ssgcc")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f68o"]
atlas = ExtResource("9_8myj2")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh3qq"]
atlas = ExtResource("9_8myj2")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icljr"]
atlas = ExtResource("9_8myj2")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_musdg"]
atlas = ExtResource("9_8myj2")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7xm6"]
atlas = ExtResource("9_8myj2")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbvkr"]
atlas = ExtResource("9_8myj2")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8at5"]
atlas = ExtResource("16_8hohc")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awru4"]
atlas = ExtResource("16_8hohc")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hx6i"]
atlas = ExtResource("16_8hohc")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxgw0"]
atlas = ExtResource("16_8hohc")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33sko"]
atlas = ExtResource("16_8hohc")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7ecx"]
atlas = ExtResource("16_8hohc")
region = Rect2(80, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ae4b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4423")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdab8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3okan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me77q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmk0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b4kq")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg20b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m24mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhkt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn0ea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x61iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgwe7")
}],
"loop": true,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oweyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q44k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6juj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0grhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_452uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wtvf")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17udm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us7ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoxic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgjpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_584wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps46h")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t4gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_383qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rmm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g34wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5idoe")
}],
"loop": true,
"name": &"down_BaG",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt3km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhnlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53l1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0am2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irxae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbfve")
}],
"loop": true,
"name": &"down_boots",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sps7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvbxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjosp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3kvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtvx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohon6")
}],
"loop": true,
"name": &"down_gloves",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dqi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqhcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o4tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igkpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsdq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn1x0")
}],
"loop": true,
"name": &"left_BaG",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh803")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7v3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwhbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0es8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nrnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7in1")
}],
"loop": true,
"name": &"left_boots",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhu1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgba1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmy3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycijc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5x0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpdyy")
}],
"loop": true,
"name": &"left_gloves",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfh07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7be6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbpxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqcfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfwts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxcmm")
}],
"loop": true,
"name": &"right_BaG",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmm4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4fni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv8ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87vq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utthb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_711k4")
}],
"loop": true,
"name": &"right_boots",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cql70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7niea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhoq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwynr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcv3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcl6i")
}],
"loop": true,
"name": &"right_gloves",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5xb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ecq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idd5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgo12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bx5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b0bu")
}],
"loop": true,
"name": &"up_BaG",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f68o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh3qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icljr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_musdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7xm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbvkr")
}],
"loop": true,
"name": &"up_boots",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8at5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awru4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hx6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxgw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33sko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7ecx")
}],
"loop": true,
"name": &"up_gloves",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q4ja6"]
radius = 3.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qspvi"]
size = Vector2(12, 17)

[node name="Player" type="CharacterBody2D"]
z_index = 3
collision_layer = 128
collision_mask = 32896
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_qgyku")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_unbkb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7ae4b")
animation = &"down_gloves"

[node name="Bow" parent="." instance=ExtResource("3_b7n85")]
visible = false

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.55
one_shot = true

[node name="ArrowCollider" type="Area2D" parent="." groups=["softhit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowCollider"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_q4ja6")

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_vuimr")
volume_db = -0.651

[node name="Release" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rwk4p")
volume_db = -5.871

[node name="Draw" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_q8hjr")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_qspvi")

[node name="hit1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_l22tc")
volume_db = -5.032

[node name="hit2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_u0y60")
volume_db = -5.032

[connection signal="child_entered_tree" from="ArrowCollider" to="." method="_on_arrow_collider_child_entered_tree"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
